--- a/app/globals.css
+++ b/app/globals.css
@@ -42,7 +42,7 @@ h1, h2, h3, h4, h5, h6 {
     left: 0;
     right: 0;
     bottom: 0;
-    background-image: url('/background-texture.jpeg');
+    background-image: var(--paper-texture-url, url('/background-texture.jpeg'));
     background-size: auto;
     background-position: center;
     opacity: 0.08;
