refactor globals.css to add dirt color variable for improved styling options

--- a/app/globals.css
+++ b/app/globals.css
@@ -22,6 +22,7 @@ html {
   /* Marca */
   --olive: 114 127 100;
   --moss: 107 122 94;
+  --dirt: 59, 47, 38;
 
   /* Acentos */
   --terracotta: 198 106 61;
