refactor CSS variables and add darkGreen color for improved theming

--- a/app/globals.css
+++ b/app/globals.css
@@ -22,7 +22,8 @@ html {
   /* Marca */
   --olive: 114 127 100;
   --moss: 107 122 94;
-  --dirt: 59, 47, 38;
+  --dirt: 59 47 38;
+  --darkGreen: 62 95 75;
 
   /* Acentos */
   --terracotta: 198 106 61;
